--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseClasses\BaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkelbiuSvetaineTests.cs" />
     <Compile Include="Testas.cs" />
